# RAG-Zoo

./: .gitignore  Document.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/docs/: contribute.md
rag_src/: __init__.py  pipeline.py
rag_src/Complete_RAG_Pipeline/: AdaptiveRAG.py  CRAG.py  GraphRAG.py  ReliableRAG.py  RunRAG.py  __init__.py  adaptiverag.py  raptor.py  tempCodeRunnerFile.py
rag_src/chunker/: __init__.py  base.py  default.py  recursive_splitter.py  semantic_splitter.py  text_splitter.py
rag_src/doc_context_enricher/: __init__.py  base.py  contextual_compression.py  default.py  doc_summarizer.ipynb  doc_summarizer.py  metadata_injector.ipynb  metadata_injector.py  qa_pair_generator.ipynb  qa_pair_generator.py  self_rerank.ipynb  self_rerank.py  semantic_filter.ipynb  semantic_filter.py  topic_tagger.ipynb  topic_tagger.py
rag_src/doc_loader/: __init__.py  base.py  default.py  uncommon_doc_loader.py  universal_doc_loader.py
rag_src/doc_preprocessor/: __init__.py  advanced_preprocessor.py  base.py  default.py
rag_src/embedder/: __init__.py  base.py  default.py  gemini_embedder.py  openai_embedder.py
rag_src/evaluator/: __init__.py  base.py  default.py  doc_relevance_evaluator.py  segment_attributor.py
rag_src/indexer/: __init__.py  base.py  chromadb_indexer.py  default.py  weaviate_indexer.py
rag_src/llm/: 12.py  2.py  3.py  HuggingFace.py  Ollama.py  OpenAI.py  __init__.py  base.py  default.py  gemini.py  graph_Rag_llm.py  groq.py
rag_src/post_retrival_enricher/: __init__.py  base.py  default.py  doc_summarizer.py  self_rerank.py  semantic_filter.py
rag_src/postretrievaldoc_context_enricher/: _init_.py  base.py  contextual_compression.py
rag_src/pre_embedding_enricher/: __init__.py  base.py  default.py  metadata_injector.py  qa_pair_generator.py  topic_tagger.py
tests/: CRAG.py  Reliable_RAG.py  RunRAG.py  geminitest.py  groq.py  main.py  test_AdaptiveRAG.py  test_CRAG.py  test_GraphRAG.py  test_Reliable_RAG.py  test_RunRAG.py
(+72 files in other folders)
