[project]
name = "rag-zoo"
version = "0.1.0"
description = "A module to easily implement different types of RAG"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "llama-index (>=0.12.44,<0.13.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "llama-index-llms-openai (>=0.4.7,<0.5.0)",
    "llama-index-llms-groq (>=0.3.2,<0.4.0)",
    "llama-index-llms-google-genai (>=0.2.2,<0.3.0)",
    "llama-index-llms-huggingface (>=0.5.0,<0.6.0)",
    "ebooklib (>=0.19,<0.20)",
    "bs4 (>=0.0.2,<0.0.3)",
    "unidecode (>=1.4.0,<2.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "pymupdf (>=1.26.1,<2.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "llama-index-embeddings-google-genai (>=0.2.0,<0.3.0)",
    "tavily-python (>=0.7.8,<0.8.0)",
    "duckduckgo-search (>=8.0.4,<9.0.0)",
    "google-search-results (>=2.4.2,<3.0.0)",
    "weaviate-client (>=4.15.4,<5.0.0)",
    "chromadb (>=1.0.13,<2.0.0)",
    "transformers (>=4.53.0,<5.0.0)",
    "llama-index-core (>=0.12.44,<0.13.0)",
    "langchain (>=0.3.26,<0.4.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
